--- a/app/src/main/res/layout/fragment_property_search_filter_dialog.xml
+++ b/app/src/main/res/layout/fragment_property_search_filter_dialog.xml
@@ -16,6 +16,7 @@
         android:id="@+id/list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
         android:clipToPadding="false"
         android:paddingStart="@dimen/marginStart"
         android:paddingTop="@dimen/list_item_spacing_half"
@@ -183,6 +184,36 @@
             </com.google.android.material.chip.ChipGroup>
 
             <TextView
+                android:id="@+id/areaText"
+                style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/marginTop"
+                android:text="@string/nearby"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/nearbyChipGroup" />
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/areaTex"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
+                android:layout_width="@dimen/formWidth"
+                android:layout_height="wrap_content"
+                android:hint="@string/select_an_area"
+                android:inputType="textAutoComplete"
+                android:labelFor="@id/filterArea"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/areaText"
+                app:layout_goneMarginEnd="@dimen/marginEnd">
+
+                <AutoCompleteTextView
+                    android:id="@+id/filterArea"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@={viewModel.area}" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <TextView
                 android:id="@+id/priceRangeText"
                 style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                 android:layout_width="0dp"
@@ -191,7 +222,7 @@
                 android:text="@string/price"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/nearbyChipGroup" />
+                app:layout_constraintTop_toBottomOf="@id/areaTex" />
 
             <com.google.android.material.slider.RangeSlider
                 android:id="@+id/priceRangeSlider"
@@ -227,64 +258,29 @@
                 app:values="@{viewModel.surfaceArray}" />
 
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/number_of_bedroom_text_layout"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="0dp"
+            <TextView
+                android:id="@+id/switchSoldText"
+                style="@style/TextAppearance.MaterialComponents.Subtitle1"
+                android:layout_width="wrap_content"
+                android:layout_height="22dp"
+                android:layout_marginStart="@dimen/marginStart"
+                android:layout_marginTop="22dp"
+                android:text="@string/sold"
+                app:layout_constraintBottom_toBottomOf="@+id/marketText"
+                app:layout_constraintStart_toStartOf="@id/filterSoldSwitch"
+                app:layout_constraintTop_toTopOf="@+id/marketText" />
+
+            <com.google.android.material.switchmaterial.SwitchMaterial
+                android:id="@+id/filterSoldSwitch"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/marginStart"
-                android:layout_marginTop="@dimen/marginTop"
-                android:layout_marginEnd="@dimen/marginEnd"
-                android:layout_marginBottom="@dimen/marginTop"
-                android:layout_weight="0.5"
-                android:hint="@string/bedrooms"
-                app:endIconMode="clear_text"
-                app:endIconTint="@color/colorAccent"
-                app:layout_constraintEnd_toStartOf="@id/bathroomsLayout"
+                android:checked="@={viewModel.sold}"
+                android:onClick="@{(v)->viewModel.filterData()}"
+                app:layout_constraintBottom_toBottomOf="@id/sellDateFilter"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/surfaceRangeSlider">
+                app:layout_constraintTop_toTopOf="@+id/sellDateFilter" />
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/number_of_bedroom_text_input"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="number"
-                    android:text="@={ viewModel.bedroomNumber }"
-                    android:textAlignment="center"
-                    android:textSize="@dimen/textSize"
-                    app:drawableStartCompat="@drawable/ic_bedroom_parent_24dp" />
-            </com.google.android.material.textfield.TextInputLayout>
-
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/bathroomsLayout"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/marginStart"
-                android:layout_marginTop="@dimen/marginTop"
-                android:layout_marginEnd="@dimen/marginEnd"
-                android:layout_marginBottom="@dimen/marginTop"
-                android:layout_weight="0.5"
-                android:hint="@string/bathroom"
-                android:inputType="number"
-                app:endIconMode="clear_text"
-                app:endIconTint="@color/colorAccent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/number_of_bedroom_text_layout"
-                app:layout_constraintTop_toBottomOf="@id/surfaceRangeSlider">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/number_of_bathroom_text_input"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:inputType="number"
-                    android:text="@={viewModel.bathroomNumber }"
-                    android:textAlignment="center"
-                    android:textSize="@dimen/textSize"
-                    app:drawableStartCompat="@drawable/ic_bathroom_24dp" />
-            </com.google.android.material.textfield.TextInputLayout>
 
             <TextView
                 android:id="@+id/marketText"
@@ -295,8 +291,8 @@
                 android:layout_marginTop="@dimen/marginTop"
                 android:layout_marginEnd="@dimen/marginEnd"
                 android:text="@string/on_market_since"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/bathroomsLayout" />
+                app:layout_constraintStart_toEndOf="@id/filterSoldSwitch"
+                app:layout_constraintTop_toBottomOf="@id/surfaceRangeSlider" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/sellDateFilter"
@@ -305,7 +301,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/marginStart"
                 android:layout_marginTop="@dimen/marginTop"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintStart_toEndOf="@id/filterSoldSwitch"
                 app:layout_constraintTop_toBottomOf="@id/marketText"
                 app:layout_goneMarginEnd="@dimen/marginEnd">
 
@@ -355,46 +351,94 @@
 
             </com.google.android.material.textfield.TextInputLayout>
 
-            <TextView
-                android:id="@+id/switchSoldText"
-                style="@style/TextAppearance.MaterialComponents.Subtitle1"
-                android:layout_width="wrap_content"
-                android:layout_height="22dp"
-                android:layout_marginStart="@dimen/marginStart"
-                android:layout_marginTop="22dp"
-                android:text="@string/sold"
-                app:layout_constraintStart_toStartOf="@id/filterSoldSwitch"
-                app:layout_constraintTop_toBottomOf="@+id/filterSoldText" />
-
-            <com.google.android.material.switchmaterial.SwitchMaterial
-                android:id="@+id/filterSoldSwitch"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/marginStart"
-                android:checked="@={viewModel.sold}"
-                android:onClick="@{(v)->viewModel.filterData()}"
-                app:layout_constraintStart_toEndOf="@id/areaTex"
-                app:layout_constraintTop_toBottomOf="@+id/switchSoldText" />
-
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/areaTex"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
-                android:layout_width="@dimen/formWidth"
+                android:id="@+id/numberOfRoomLayout"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/marginStart"
-                android:hint="@string/select_an_area"
-                android:inputType="textAutoComplete"
-                android:labelFor="@id/filterArea"
+                android:layout_marginTop="@dimen/marginTop"
+                android:layout_marginEnd="@dimen/marginEnd"
+                android:layout_marginBottom="@dimen/marginTop"
+                android:hint="@string/rooms"
+                app:endIconMode="clear_text"
+                app:endIconTint="@color/colorAccent"
+                app:layout_constraintEnd_toStartOf="@id/number_of_bedroom_text_layout"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/switchSoldText"
-                app:layout_goneMarginEnd="@dimen/marginEnd">
+                app:layout_constraintTop_toBottomOf="@+id/filterSoldText">
 
-                <AutoCompleteTextView
-                    android:id="@+id/filterArea"
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/number_of_room_text_input"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@={viewModel.area}" />
+                    android:layout_weight="0.3"
+                    android:inputType="number"
+                    android:text="@={viewModel.roomNumber }"
+                    android:textAlignment="center"
+                    android:textSize="@dimen/textSize"
+                    app:drawableStartCompat="@drawable/ic_room_24dp"
+                    app:endIconMode="clear_text" />
             </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/number_of_bedroom_text_layout"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/marginStart"
+                android:layout_marginTop="@dimen/marginTop"
+                android:layout_marginEnd="@dimen/marginEnd"
+                android:layout_marginBottom="@dimen/marginTop"
+                android:layout_weight="0.33"
+                android:hint="@string/bedrooms"
+                app:endIconMode="clear_text"
+                app:endIconTint="@color/colorAccent"
+                app:layout_constraintEnd_toStartOf="@id/bathroomsLayout"
+                app:layout_constraintStart_toEndOf="@id/numberOfRoomLayout"
+                app:layout_constraintTop_toBottomOf="@id/filterSoldText">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/number_of_bedroom_text_input"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="number"
+                    android:text="@={ viewModel.bedroomNumber }"
+                    android:textAlignment="center"
+                    android:textSize="@dimen/textSize"
+                    app:drawableStartCompat="@drawable/ic_bedroom_parent_24dp" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/bathroomsLayout"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/marginStart"
+                android:layout_marginTop="@dimen/marginTop"
+                android:layout_marginEnd="@dimen/marginEnd"
+                android:layout_marginBottom="@dimen/marginTop"
+                android:layout_weight="0.33"
+                android:hint="@string/bathroom"
+                android:inputType="number"
+                app:endIconMode="clear_text"
+                app:endIconTint="@color/colorAccent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/number_of_bedroom_text_layout"
+                app:layout_constraintTop_toBottomOf="@id/filterSoldText">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/number_of_bathroom_text_input"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:inputType="number"
+                    android:text="@={viewModel.bathroomNumber }"
+                    android:textAlignment="center"
+                    android:textSize="@dimen/textSize"
+                    app:drawableStartCompat="@drawable/ic_bathroom_24dp" />
+            </com.google.android.material.textfield.TextInputLayout>
+
 
             <Button
                 android:id="@+id/applyFilter"
@@ -404,7 +448,7 @@
                 android:text="@string/reset"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/areaTex" />
+                app:layout_constraintTop_toBottomOf="@id/bathroomsLayout" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.core.widget.NestedScrollView>
