--- a/app/src/main/res/layout/fragment_property_search_filter_dialog.xml
+++ b/app/src/main/res/layout/fragment_property_search_filter_dialog.xml
@@ -58,9 +58,8 @@
             android:layout_height="400dp"
             android:layout_marginBottom="50dp"
             android:fitsSystemWindows="true"
-            android:paddingStart="@dimen/marginStart"
             android:paddingTop="@dimen/list_item_spacing_half"
-            android:paddingEnd="@dimen/marginEnd"
+
             app:behavior_hideable="false"
             app:behavior_peekHeight="400dp"
             app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
@@ -74,10 +73,14 @@
                 <TextView
                     android:id="@+id/typeFilter"
                     style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
-                    android:layout_width="42dp"
-                    android:layout_height="20dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:text="@string/property_type"
                     android:textStyle="bold"
+                    android:paddingStart="@dimen/marginStart"
+                    android:paddingTop="@dimen/marginTop"
+                    android:paddingEnd="@dimen/marginEnd"
+                    android:paddingBottom="@dimen/marginTop"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -100,7 +103,6 @@
                     style="@style/Base.CardView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
                     android:layout_marginTop="@dimen/marginTop"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -117,6 +119,9 @@
                         android:layout_height="wrap_content"
                         android:checked="true"
                         app:chipSpacingHorizontal="22dp"
+                        android:paddingStart="@dimen/marginStart"
+                        android:paddingEnd="@dimen/marginEnd"
+                        android:paddingBottom="@dimen/marginTop"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent">
 
@@ -176,12 +181,23 @@
                     </com.google.android.material.chip.ChipGroup>
                 </androidx.cardview.widget.CardView>
 
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="@dimen/marginTop"
+                    android:background="@android:color/darker_gray"
+                    app:layout_constraintBottom_toBottomOf="@id/typeFilter"
+                    app:layout_constraintStart_toStartOf="parent" />
+
                 <TextView
                     android:id="@+id/nearByFilter"
                     style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
+                    android:paddingStart="@dimen/marginStart"
+                    android:paddingTop="@dimen/marginTop"
+                    android:paddingEnd="@dimen/marginEnd"
                     android:text="@string/nearby"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
@@ -191,6 +207,7 @@
                     android:id="@+id/arrowButton2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:paddingTop="@dimen/marginTop"
                     android:background="@color/white"
                     android:onClick="@{()->fragment.setExpandableListener(baseCardview2, arrowButton2  )}"
                     app:layout_constraintBottom_toBottomOf="@id/nearByFilter"
@@ -206,7 +223,6 @@
                     style="@style/Base.CardView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.473"
@@ -215,6 +231,9 @@
                     app:layout_constraintVertical_bias="0.021">
 
                     <com.google.android.material.chip.ChipGroup
+                        android:paddingStart="@dimen/marginStart"
+                        android:paddingEnd="@dimen/marginEnd"
+                        android:paddingBottom="@dimen/marginTop"
                         android:id="@+id/nearbyChipGroup"
                         style="@style/Widget.MaterialComponents.Chip.Choice"
                         android:layout_width="wrap_content"
@@ -286,6 +305,8 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/marginTop"
+                    android:paddingStart="@dimen/marginStart"
+                    android:paddingEnd="@dimen/marginEnd"
                     android:text="@string/area"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
@@ -309,7 +330,6 @@
                     style="@style/Base.CardView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.473"
@@ -324,6 +344,9 @@
                         android:layout_height="wrap_content"
                         android:hint="@string/select_an_area"
                         android:inputType="textAutoComplete"
+                        android:paddingStart="@dimen/marginStart"
+                        android:paddingEnd="@dimen/marginEnd"
+                        android:paddingBottom="@dimen/marginTop"
                         android:labelFor="@id/filterArea"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/areaText"
@@ -343,6 +366,8 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/marginTop"
+                    android:paddingStart="@dimen/marginStart"
+                    android:paddingEnd="@dimen/marginEnd"
                     android:text="@string/price"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
@@ -353,7 +378,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@color/white"
-                    android:onClick="@{()->fragment.setExpandableListener(baseCardViewPrice, arrowButton2  )}"
+                    android:onClick="@{()->fragment.setExpandableListener(baseCardViewPrice, arrowButtonPrice  )}"
                     app:layout_constraintBottom_toBottomOf="@id/nearByFilter"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.802"
@@ -367,7 +392,6 @@
                     style="@style/Base.CardView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
                     android:layout_marginTop="@dimen/marginTop"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -380,6 +404,9 @@
                         android:id="@+id/priceRangeSlider"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:paddingStart="@dimen/marginStart"
+                        android:paddingEnd="@dimen/marginEnd"
+                        android:paddingBottom="@dimen/marginTop"
                         android:stepSize="100000"
                         android:valueFrom="@{viewModel.minPrice}"
                         android:valueTo="@{viewModel.maxPrice}"
@@ -394,6 +421,8 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/marginTop"
+                    android:paddingStart="@dimen/marginStart"
+                    android:paddingEnd="@dimen/marginEnd"
                     android:text="@string/surface"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
@@ -404,7 +433,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@color/white"
-                    android:onClick="@{()->fragment.setExpandableListener(baseCardViewSurface, arrowButtonArea )}"
+                    android:onClick="@{()->fragment.setExpandableListener(baseCardViewSurface, arrowButtonSurface )}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.802"
                     app:layout_constraintStart_toStartOf="parent"
@@ -417,7 +446,6 @@
                     style="@style/Base.CardView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.473"
                     app:layout_constraintStart_toStartOf="parent"
@@ -428,6 +456,9 @@
                         android:id="@+id/surfaceRangeSlider"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:paddingStart="@dimen/marginStart"
+                        android:paddingEnd="@dimen/marginEnd"
+                        android:paddingBottom="@dimen/marginTop"
                         android:stepSize="10"
                         android:valueFrom="@{viewModel.minSurface}"
                         android:valueTo="@{viewModel.maxSurface}"
@@ -436,13 +467,14 @@
 
                 <TextView
                     android:id="@+id/marketText"
-                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
+                    style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/marginStart"
                     android:layout_marginTop="@dimen/marginTop"
-                    android:layout_marginEnd="@dimen/marginEnd"
                     android:text="@string/on_market_since"
+                    android:paddingStart="@dimen/marginStart"
+                    android:paddingEnd="@dimen/marginEnd"
+                    android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/baseCardViewSurface" />
 
@@ -464,7 +496,6 @@
                     style="@style/Base.CardView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.473"
                     app:layout_constraintStart_toStartOf="parent"
@@ -478,6 +509,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/marginStart"
                         android:layout_marginTop="@dimen/marginTop"
+                        android:paddingBottom="@dimen/marginTop"
                         app:layout_constraintStart_toEndOf="@id/filterSoldSwitch"
                         app:layout_constraintTop_toBottomOf="@id/marketText"
                         app:layout_goneMarginEnd="@dimen/marginEnd">
@@ -495,12 +527,14 @@
 
                 <TextView
                     android:id="@+id/switchSoldText"
-                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
+                    style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                     android:layout_width="wrap_content"
                     android:layout_height="22dp"
-                    android:layout_marginStart="@dimen/marginStart"
                     android:layout_marginTop="22dp"
+                    android:paddingStart="@dimen/marginStart"
+                    android:paddingEnd="@dimen/marginEnd"
                     android:text="@string/sold"
+                    android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/baseCardViewSellDate" />
 
@@ -522,7 +556,6 @@
                     style="@style/Base.CardView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.473"
                     app:layout_constraintStart_toStartOf="parent"
@@ -530,6 +563,9 @@
                     app:layout_constraintVertical_bias="0.021">
 
                     <androidx.constraintlayout.widget.ConstraintLayout
+                        android:paddingStart="@dimen/marginStart"
+                        android:paddingEnd="@dimen/marginEnd"
+                        android:paddingBottom="@dimen/marginTop"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
 
@@ -568,13 +604,14 @@
 
                 <TextView
                     android:id="@+id/characteristicsText"
-                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
+                    style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/marginStart"
                     android:layout_marginTop="@dimen/marginTop"
-                    android:layout_marginEnd="@dimen/marginEnd"
+                    android:paddingStart="@dimen/marginStart"
+                    android:paddingEnd="@dimen/marginEnd"
                     android:text="@string/characteristics"
+                    android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/baseCardViewSoldSwitch" />
 
@@ -605,6 +642,9 @@
                     app:layout_constraintVertical_bias="0.021">
 
                     <androidx.constraintlayout.widget.ConstraintLayout
+                        android:paddingStart="@dimen/marginStart"
+                        android:paddingEnd="@dimen/marginEnd"
+                        android:paddingBottom="@dimen/marginTop"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
 
@@ -617,11 +657,10 @@
                             android:layout_marginTop="@dimen/marginTop"
                             android:layout_marginEnd="@dimen/marginEnd"
                             android:layout_marginBottom="@dimen/marginTop"
+                            android:layout_weight="0.5"
                             android:hint="@string/rooms"
                             app:endIconMode="clear_text"
                             app:endIconTint="@color/colorAccent"
-                            android:layout_weight="0.5"
-
                             app:layout_constraintEnd_toStartOf="@id/number_of_bedroom_text_layout"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent">
@@ -652,8 +691,8 @@
                             android:hint="@string/bedrooms"
                             app:endIconMode="clear_text"
                             app:endIconTint="@color/colorAccent"
-                            app:layout_constraintStart_toEndOf="@id/numberOfRoomLayout"
                             app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toEndOf="@id/numberOfRoomLayout"
                             app:layout_constraintTop_toTopOf="parent">
 
                             <com.google.android.material.textfield.TextInputEditText
@@ -683,8 +722,8 @@
                             app:endIconMode="clear_text"
                             app:endIconTint="@color/colorAccent"
                             app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintEnd_toStartOf="@id/numberPicsLayout"
+                            app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="@id/number_of_bedroom_text_layout">
 
                             <com.google.android.material.textfield.TextInputEditText
